--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="theme-color" content="#317EFB"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Website-Files/style.css">
-    <link rel="icon" href="/Image-Assets/RSX2024Logo.webp">
-    <title>RSX '24 Dashboard</title>
+    <link rel="stylesheet" href="./Website-Files/style.css">
+    <link rel="icon" href="./Image-Assets/RSX2024Logo.webp">
+    <title>Spectrasolis Dashboard</title>
 </head>
 <body>
     <div class="popUpScreen">
