--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="infoBox">
                     <div class="titleBox">
-                        <div class="title">RockSatX 2024 Dashboard</div>
+                        <div class="title">Spectrasolis Dashboard</div>
                         <div class="subtitle">College of the Canyons</div>
                     </div>
                 </div>
