--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             </div>
             </div>
         </div>
-        <script src="https://unpkg.com/axios@0.19.0/dist/axios.js"></script>
-        <script src="/Website-Files/index.js" type="module"></script>
+        <script src="./Website-Files/index.js" type="module"></script>
     </div>
 </body>
 </html>
