--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
     <div class="mainContent">
         <div class="background" id="background">
-            <img class="backgroundElem" id="backgroundElem1" src="/Image-Assets/BG-P1.webp">
-            <img class="backgroundElem" id="backgroundElem2" src="/Image-Assets/BG-P2.webp">
-            <img class="backgroundElem" id="backgroundElem3" src="/Image-Assets/BG-P3.webp">
+            <img class="backgroundElem" id="backgroundElem1" src="./Image-Assets/BG-P1.webp">
+            <img class="backgroundElem" id="backgroundElem2" src="./Image-Assets/BG-P2.webp">
+            <img class="backgroundElem" id="backgroundElem3" src="./Image-Assets/BG-P3.webp">
         </div>
         <div class="navbar">
             <nav>
@@ -58,7 +58,7 @@
                     <div class="colorModeSwitch">
                         <div class="colorModeToggle"></div>
                         <div class="colorModeIconBox">
-                            <img class="colorModeIcon" src="/Image-Assets/LightModeIcon.webp">
+                            <img class="colorModeIcon" src="./Image-Assets/LightModeIcon.webp">
                         </div>
                 </div>
             </div>
