--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="logoBox" id="logoBox">
                     <img src="Image-Assets/APC-Logo.webp" class="logo" id="logo" alt="hi">
                     <div class="logoTextContainer" id="logoTextContainer">
-                        <p class="logoText" id="logoText">HASP 2025</p>
+                        <p class="logoText" id="logoText">HASP '25</p>
                     </div>
                 </div>
                 <div class="infoBox">
