--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@
     <!-- Include D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Include your JavaScript file -->
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
