--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet'>
     <title>Spectrasolis (HASP '25)</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Main Container -->
@@ -62,6 +62,6 @@
     <!-- Include D3.js -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Include your JavaScript file -->
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
