--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div id="right-side">
             <div id="text-box">
-                <p>Mission Log</p>
+                <p style="font-weight: bold"> Mission Log</p>
             </div>
 
             <div id="mission-log">
